# workbench

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: install-local-aionis.sh  run-controller-contract-suite.sh  run-real-e2e.sh  run-real-live-e2e.sh  run-real-live-openai-agents-e2e.sh  run-release-gates.sh  summarize-junit.py
tests/: conftest.py  test_ab_test_baseline.py  test_ab_test_models.py  test_ab_test_report.py  test_ab_test_runner.py  test_aionisdoc_bridge.py  test_aionisdoc_service.py  test_app_harness_models.py  test_arc_bridge_packets.py  test_bootstrap.py  test_cli_shell.py  test_delivery_executor.py  test_delivery_workspace.py  test_doc_learning.py  test_dream_models.py  test_dream_service.py  test_dream_state.py  test_execution_host_factory.py  test_launcher_state.py  test_live_profile.py  test_openai_agents_execution_host.py  test_product_workflows.py  test_provider_profiles.py  test_recovery_service.py  test_release_gates.py  test_reviewer_contracts.py  test_runtime_bridge_contracts.py  test_runtime_bridge_host.py  test_runtime_manager.py  test_shell_commands.py  test_shell_dispatch.py  test_statusline.py  test_test_bootstrap.py
tests_real_e2e/: test_app_harness_planner_contract.py  test_cli_driver.py  test_editor_to_dream.py  test_launcher_runtime_cycle.py  test_manifest_loader.py  test_publish_recover_resume.py  test_real_ab_test_report.py  test_repeated_workflow_reuse.py  test_repo_cache.py  test_result_models.py  test_runtime_env.py
tests_real_live_e2e/: test_live_ab_test_report.py  test_live_ab_test_second_cycle_report.py  (+17 more)
(+146 files in other folders)
